added firewall exclusion creator. To create exclusion, ide should be launched with admin rights